--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/shinzui/hapi-exit#readme",
   "devDependencies": {
-    "babel-eslint": "^4.1.1",
+    "babel-eslint": "^4.1.3",
     "code": "^1.5.0",
-    "lab": "^5.16.1"
+    "lab": "^6.2.0"
   },
   "dependencies": {
-    "hapi": "^10.0.0",
-    "hoek": "^2.15.0"
+    "hapi": ">=11.0.0",
+    "hoek": ">=2.16.3"
   }
 }
